# OTGMaster

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  generate_testdata.sh  gradle.properties  launch_emulator.sh  run_e2e_tests.sh  settings.gradle.kts  write_support_fat32_strategy.txt
.github/workflows/: ci.yml  release.yml
app/: build.gradle.kts
app/src/androidTest/java/app/fayaz/otgmaster/: E2EAutomatedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  VeraCryptNative.cpp
app/src/main/cpp/exfat/: ExFatNative.cpp  compiler.h  io.c  log.c  mount.c  node.c  rewrite_io.py
app/src/main/cpp/serpent/: PROVENANCE.md  serpent-api.h  serpent_adapter.c  serpent_adapter.h  xts_generic.c  xts_generic.h
app/src/main/java/app/fayaz/otgmaster/: MainActivity.kt  OtgMasterState.kt  VeraCryptDocumentProvider.kt
app/src/main/java/app/fayaz/otgmaster/block/: FileBlockDevice.kt  RawBlockDevice.kt  SlicedBlockDevice.kt
app/src/main/java/app/fayaz/otgmaster/exfat/: ExFatFile.kt  ExFatFileSystem.kt  ExFatFileSystemCreator.kt  ExFatNative.kt  ExFatNode.kt
app/src/main/java/app/fayaz/otgmaster/fs/: Fat32Reader.kt  FilesystemDetector.kt
app/src/main/java/app/fayaz/otgmaster/partition/: GptParser.kt  MbrParser.kt  PartitionEntry.kt
app/src/main/java/app/fayaz/otgmaster/provider/: VeraCryptDocumentProvider.kt
app/src/main/java/app/fayaz/otgmaster/security/: CredentialStore.kt
app/src/main/java/app/fayaz/otgmaster/usb/: LibaumsRawBlockDevice.kt  LibaumsRawBlockDeviceOpener.kt  RealUsbDeviceProvider.kt  UsbDeviceDescriber.kt  UsbDeviceProvider.kt
app/src/main/java/app/fayaz/otgmaster/veracrypt/: NativeDecryptedBlockDevice.kt  VeraCryptCipher.kt  VeraCryptNative.kt  VeraCryptUnlocker.kt  VolumeCandidate.kt
app/src/main/java/com/otgmaster/: MainActivity.kt  OtgMasterState.kt  VeraCryptDocumentProvider.kt
app/src/main/java/com/otgmaster/block/: RawBlockDevice.kt  SlicedBlockDevice.kt
app/src/main/java/com/otgmaster/exfat/: ExFatFile.kt  ExFatFileSystem.kt  ExFatFileSystemCreator.kt  ExFatNative.kt  ExFatNode.kt
app/src/main/java/com/otgmaster/fs/: Fat32Reader.kt
app/src/main/java/com/otgmaster/partition/: GptParser.kt  MbrParser.kt  PartitionEntry.kt
app/src/main/java/com/otgmaster/provider/: VeraCryptDocumentProvider.kt
app/src/main/java/com/otgmaster/usb/: LibaumsRawBlockDevice.kt  LibaumsRawBlockDeviceOpener.kt  UsbDeviceDescriber.kt
app/src/main/java/com/otgmaster/veracrypt/: NativeDecryptedBlockDevice.kt  VeraCryptNative.kt  VeraCryptUnlocker.kt  VolumeCandidate.kt
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/xml/: shortcuts.xml  usb_device_filter.xml
app/src/test/java/app/fayaz/otgmaster/fs/: FilesystemDetectorTest.kt
app/src/test/java/app/fayaz/otgmaster/provider/: VeraCryptDocumentProviderTest.kt
app/src/test/java/app/fayaz/otgmaster/veracrypt/: NativeDecryptedBlockDeviceTest.kt
docs/: ROADMAP.md  privacy-policy.html
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 28.txt  29.txt  30.txt  31.txt  32.txt  33.txt  36.txt  37.txt  38.txt  39.txt  40.txt  41.txt
libaums/: CMakeLists.txt  build.gradle.kts
libaums/src/c/: usb.c
libaums/src/main/java/me/jahnen/libaums/core/driver/scsi/: ScsiBlockDevice.kt
libaums/src/main/java/me/jahnen/libaums/core/driver/scsi/commands/sense/: ScsiRequestSense.kt
scratch/: CRCTest.java  crc_test  crc_test.cpp  crc_test.kt
scripts/: bump-version.sh  generate_testdata.sh  launch_emulator.sh  qemu_hmp.py  regen_partitioned_mbr.sh  run_e2e_tests.sh
testdata/exfat/: description.txt
testdata/exfat_keyfile/: description.txt  test.key
testdata/exfat_write/: description.txt
testdata/ext4/: description.txt
testdata/fat16/: description.txt
testdata/fat32/: description.txt
testdata/fat32_keyfile/: description.txt  test.key
testdata/fat32_keyfile_pim/: description.txt
testdata/fat32_write/: description.txt
testdata/ntfs/: description.txt
testdata/partitioned_mbr/: boot.txt  description.txt
testdata/serpent/: description.txt
testdata/unsupported_cipher/: description.txt
